--- a/nr592/syllabus_spring2019.Rmd
+++ b/nr592/syllabus_spring2019.Rmd
@@ -30,7 +30,7 @@ NR 592, Section 1: Seminar in Natural Resources (1 credit)
 
 **Instructor**  
 Richard E.W. Berl, Human Dimensions of Natural Resources  
-*(He/Him)*  
+*(He/Him/His)*  
 Forestry 201  
 rewberl@colostate.edu  
 [rewberl.github.io](https://rewberl.github.io)
