--- a/nr592/lectures/lecture10.Rmd
+++ b/nr592/lectures/lecture10.Rmd
@@ -1,7 +1,7 @@
 ---
 title: |
   | &nbsp;
-  | Week 5, Lecture 09
+  | Week 5, Lecture 10
   | Advanced statistical methods, part I: Ecological analyses, ordinal data, and dimensionality reduction
 author: |
   | &nbsp;
@@ -17,268 +17,50 @@ output:
     highlight: haddock
 ---
 
-## Ecological analyses
+## Dimensionality reduction
 
-Download the data from the annual Audubon Christmas Bird Count here: http://netapp.audubon.org/CBCObservation/Historical/ResultsByCount.aspx
-
-Let's get all of the data available for Fort Collins: For "Start Year," select Count 1 in 1900; leave "End Year" at 2017; select "United States" and "Colorado" and flip through the pages until you find "Fort Collins" (was at the bottom of page 2 for me). Click the bubble, select CSV and Export.
-
-Place the data in your `/data` folder.
-
-```{r}
-library(readr)
-```
-
-```{r}
-fcbird = as.data.frame(read_csv("./data/HistoricalResultsByCount [COFC-1901-2018].csv",
-                    skip=208, n_max=18031))
-```
-
-```{r}
-head(fcbird)
-tail(fcbird)
-```
-
-```{r}
-library(stringr)
-```
-
-```{r}
-fcbird$SPEC_NAME = str_split_fixed(fcbird$COM_NAME, "\\r\\n", 2)[,2]
-fcbird$SPEC_NAME = gsub("\\[|\\]", "", fcbird$SPEC_NAME)
-fcbird$COM_NAME = str_split_fixed(fcbird$COM_NAME, "\r\n", 2)[,1]
-fcbird$CountYear = as.integer(substr(fcbird$CountYear, 1, 4))
-
-fcbird = fcbird[,c("COM_NAME","SPEC_NAME","CountYear","how_manyCW")]
-```
-
-```{r}
-head(fcbird)
-tail(fcbird)
-```
-
-[Cheat Sheet](https://www.rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf)
-
-```{r, warning=FALSE}
-library(tidyr)
-```
-
-```{r}
-fcbirdW = spread(fcbird[,-2], "COM_NAME", "how_manyCW")
-```
-
-`vegan` doesn't accept missing values :(
-
-```{r}
-l1 = combn(2:length(fcbirdW[,-1]), 2, function(x) fcbirdW[,-1][x[1]:x[2]], simplify = FALSE)
-# If you also need "combinations" of only single columns, then uncomment the next line
-# l1 = c(d[-1], l1)
-l2 = sapply(l1, function(x) sum(complete.cases(x)))
-
-score = sapply(1:length(l1), function(i) NCOL(l1[[i]]) * l2[i])
-best_score = which.max(score)
-best = l1[[best_score]]
-```
-Source: [dww on StackOverflow, 12/4/18](https://stackoverflow.com/a/53616117/6408008)
-
-```{r}
-rownames(best) = fcbirdW$CountYear
-best = best[complete.cases(best),]
-# best = apply(best, as.numeric)
-best = data.frame(lapply(best, function(x) as.numeric(as.character(x))),
-                  check.names=F, row.names=rownames(best))
-
-head(best)
-str(best)
-```
-
-```{r, eval=FALSE}
-install.packages("vegan")
-```
-
-```{r, warning=FALSE}
-library(vegan)
-```
-
-<br>
-
-### Diversity
-
-```{r, eval=FALSE}
-?diversity
-```
-
-```{r}
-diversity(best, index="shannon")
-diversity(best, index="simpson")
-```
-
-```{r}
-bestDiv = diversity(best, index="simpson")
-
-plot(as.numeric(names(bestDiv)), bestDiv)
-abline(lm(bestDiv ~ as.numeric(names(bestDiv))), col="red")
-
-cor.test(as.numeric(names(bestDiv)), bestDiv)
-```
-
-<br>
-
-### Evenness
-
-```{r}
-diversity(best, index="shannon") / log(specnumber(best))
-```
-
-<br>
-
-### Richness
-
-```{r, eval=FALSE}
-?rarefy
-```
-
-```{r}
-rarefy(best, sample=10)
-head(rarefy(best, sample=c(5, 15)))
-```
-
-```{r}
-rarecurve(t(best))
-```
-
-```{r, eval=FALSE}
-?specaccum
-```
-
-<br>
-
-`diverse` package
-
-<br><br>
-
-## Ordinal data
-
-Let's get some Human Dimensions data for once! Go to the US Forest Service page for the 2004 visitor preference and usage data set for the Bob Marshall Wilderness Complex in Montana: https://www.fs.usda.gov/rds/archive/Product/RDS-2017-0016
-
-At the bottom, click "Download data publication," which gives you a ZIP archive. Open it up, go into the "Data" folder and pull out both CSVs for your `/data` directory. You can hang on to the other files in the archive as well, for the metadata.
-
-For now, let's load in the onsite data:
+Let's load our Bob Marshall onsite survey data back in:
 
 ```{r}
 bm = read.csv("./data/BMWC2004_onsitedata.csv", header=T, na.strings="88",
               stringsAsFactors=F)
-```
+bm$recent_f[bm$recent_f == 0] = NA
 
-```{r}
-head(bm)
-```
-
-### Likert data
-
-```{r}
-summary(bm[,36:45])
-```
-
-<big>You can't take the mean of an ordinal variable!</big>
-
-But you can take the median.
-
-```{r}
-hist(bm$familiar)
-```
-
-<br>
-
-### Hypothesis testing
-
-Permutation tests
-
-```{r, eval=FALSE}
-install.packages("coin")
-```
-
-```{r, warning=FALSE}
-library(coin)
-```
-
-```{r}
 bmLik = bm
-bmLik$st = factor(ifelse(bmLik$st != "MT", "Not MT", "MT"))
-bmLik$familiar = ordered(bmLik$familiar)
+bmLik[,36:45] = lapply(bmLik[,36:45], function(x) ordered(x))
 ```
 
-```{r}
-table(bmLik$st, bmLik$familiar)
-```
-
-```{r, eval=FALSE}
-?independence_test
-```
-
-```{r}
-independence_test(familiar ~ st, data=bmLik)
-```
-
-Two-way tests, regression, etc. available on Mangiafico page
-
-<br>
-
-### Polychoric correlations
-
-```{r, eval=FALSE}
-install.packages("lavaan")
-```
+And recreate our correlation matrix:
 
 ```{r, warning=FALSE}
 library(lavaan)
-```
 
-```{r, eval=FALSE}
-?lavCor
-```
-
-```{r, eval=FALSE}
-?psych::tetrachor
-```
-
-```{r}
-bmLik[,36:45] = lapply(bmLik[,36:45], function(x) ordered(x))
-str(bmLik)
-```
-
-```{r}
-bmLik$recent_f
-```
-
-```{r}
 bmLikCor = lavCor(bmLik[,36:45])
-bmLikCor
 ```
+
+Let's also load our previously saved "best" Christmas Bird Count data:
+
+```{r}
+best = read.csv("./data/fcbirdbest.csv", header=T, row.names=1)
+```
+
+And finally, we'll also bring back our old Indo-European folktale data from [Lecture 03](./lecture03.html):
 
 ```{r, warning=FALSE}
-library(corrplot)
+library(readxl)
 ```
 
 ```{r}
-corrplot.mixed(bmLikCor, lower="ellipse", upper="number")
+folktales = as.data.frame(read_xlsx(path="./data/rsos150645supp1.xlsx",
+                                    sheet=1, range="A2:JP52"))
+colnames(folktales)[1] = "society"
 ```
 
 <br>
 
-### Treating ordinal data as continuous
-
-If you have at least 6 levels and good sample size, you're usually okay.
-
-See:
-
-Rhemtulla, M., et al. (2012). When can categorical variables be treated as continuous? A comparison of robust continuous and categorical SEM estimation methods under suboptimal conditions. Psychological Methods, 17(3), 354. doi: [10.1037/a0029315](https://doi.org/10.1037/a0029315)
-
-<br><br>
-
-## Dimensionality reduction
-
 ### Multidimensional scaling
+
+Primarily used as a way to visualize a distance matrix
 
 ```{r, eval=FALSE}
 install.packages("psych")
@@ -312,7 +94,8 @@ bmCMD
 
 ```{r}
 plot(bmCMD[,1], bmCMD[,2])
-text(bmCMD[,1], bmCMD[,2] + 0.025, labels=row.names(bmCMD), col="blue")
+text(bmCMD[,1], bmCMD[,2] + 0.04,
+     labels=rownames(bmCMD), col="blue", cex=0.7)
 ```
 
 <br>
@@ -336,14 +119,18 @@ bmNMD
 
 ```{r}
 plot(bmNMD$points[,1], bmNMD$points[,2])
-text(bmNMD$points[,1], bmNMD$points[,2] + 0.02,
-     labels=row.names(bmNMD$points), col="blue", cex=0.7)
+text(bmNMD$points[,1], bmNMD$points[,2] + 0.04,
+     labels=rownames(bmNMD$points), col="blue", cex=0.7)
 ```
 
 <br>
 
+```{r, warning=FALSE}
+library(vegan)
+```
+
 ```{r, eval=FALSE}
-?vegan::metaMDS
+?metaMDS
 ```
 
 ```{r}
@@ -357,17 +144,70 @@ bestNMD
 
 ```{r}
 plot(bestNMD)
-text(bestNMD$points[,1], bestNMD$points[,2] + 0.02,
-     labels=row.names(bestNMD$points), col="blue", cex=0.7)
-text(bestNMD$species[,1], bestNMD$species[,2] + 0.02,
-     labels=row.names(bestNMD$species), col="red", cex=0.7)
+text(bestNMD$points[,1], bestNMD$points[,2] + 0.025,
+     labels=rownames(bestNMD$points), col="blue", cex=0.7)
+text(bestNMD$species[,1], bestNMD$species[,2] + 0.025,
+     labels=rownames(bestNMD$species), col="red", cex=0.7)
 ```
+
+<br><br>
+
+### Principal components analysis
+
+```{r, eval=FALSE}
+?princomp
+```
+
+```{r, eval=FALSE}
+?psych::principal
+```
+
+```{r, eval=FALSE}
+?psych::tetrachoric
+```
+
+```{r}
+folk = as.data.frame(t(folktales[,-1]))
+colnames(folk) = folktales$society
+folk[1:5,1:10]
+```
+
+```{r}
+str(folk)
+```
+
+**Tetrachoric correlation**
+
+Binary data
+
+```{r}
+folkCor = tetrachoric(folk)$rho
+folkCor[1:10,1:10]
+```
+
+Note warnings about bivariate cell corrections. Okay to leave as 0.5. Source:
+
+Savalei, V. (2011). What to do about zero frequency cells when estimating polychoric correlations. Structural Equation Modeling, 18(2), 253-273. doi: [10.1080/10705511.2011.557339](https://doi.org/10.1080/10705511.2011.557339)
+
+Smoothing ensures the matrix isn't singular and is usually also okay.
+
+```{r}
+folkPCA = principal(folkCor, 2, rotate="none")
+folkPCA
+```
+
+```{r}
+plot(folkPCA$loadings[,1], folkPCA$loadings[,2])
+text(folkPCA$loadings[,1], folkPCA$loadings[,2] + 0.04,
+     labels=rownames(folkPCA$loadings), col="blue", cex=0.7)
+```
+
 
 <br><br>
 
 ### Cluster analysis
 
-#### Hierarchical clustering
+#### **Hierarchical clustering**
 
 ```{r, eval=FALSE}
 ?hclust
@@ -382,7 +222,8 @@ plot(bmHC)
 ```
 
 ```{r}
-heatmap(bmLikCor, hclustfun=function(x) hclust(x, method="ward.D2"))
+heatmap(as.matrix(bmLikDist),
+        hclustfun=function(x) hclust(x, method="ward.D2"))
 ```
 
 ```{r, eval=FALSE}
@@ -397,9 +238,10 @@ library(pvclust)
 ?pvclust
 ```
 
-Needs raw data; does not allow distance matrix as input
+Needs raw numeric data; does not allow distance matrix as input
 
 ```{r}
+# Note: Takes some time to run
 bmPVHC = pvclust(bm[,36:45], method.hclust="ward.D2")
 ```
 
@@ -412,10 +254,173 @@ Red = "AU" (Approximately Unbiased) _p_value: 1 - _p_-value (>95 is "significant
 
 Green = "BP" (Bootstrap Probability): percent of times the tree-building algorithm produced that branch
 
+<br>
+
+#### **K-means clustering**
+
+```{r, eval=FALSE}
+?kmeans
+```
+
+Does not work with missing values
+
+"Elbow method"
+
+```{r, eval=FALSE}
+install.packages("factoextra")
+```
+
+```{r, warning=FALSE}
+library(factoextra)
+```
+
+```{r}
+fviz_nbclust(best, kmeans, "wss")
+```
+
+```{r}
+fviz_nbclust(best, kmeans, "silhouette")
+```
+
+```{r}
+bestKM4 = kmeans(best, 4)
+bestKM4
+```
+
+```{r}
+fviz_cluster(bestKM4, data=best, show.clust.cent=F)
+```
+
+```{r}
+bestKM2 = kmeans(best, 2)
+fviz_cluster(bestKM2, data=best, show.clust.cent=F)
+```
+
+This clustered by row (year). What if we want to cluster by column (species) instead?
+
+```{r}
+fviz_nbclust(t(best), kmeans, "wss", k.max=nrow(t(best)) - 1)
+```
+
+```{r}
+fviz_nbclust(t(best), kmeans, "silhouette", k.max=nrow(t(best)) - 1)
+```
+
+```{r}
+bestTKM2 = kmeans(t(best), 2)
+bestTKM2
+```
+
+```{r}
+fviz_cluster(bestTKM2, data=t(best), show.clust.cent=F)
+```
+
+<br>
+
+#### **K-medoids clustering**
+
+```{r, eval=FALSE}
+install.packages("cluster")
+```
+
+```{r, warning=FALSE}
+library(cluster)
+```
+
+```{r, eval=FALSE}
+?pam
+```
+
+```{r, eval=FALSE}
+install.packages("fpc")
+```
+
+```{r, warning=FALSE}
+library(fpc)
+```
+
+```{r, eval=FALSE}
+?pamk
+```
+
+```{r}
+folkDist = as.dist(cor2dist(folkCor))
+as.matrix(folkDist)[1:10,1:10]
+```
+
+```{r}
+dim(folkDist)
+nrow(folkDist)
+ncol(folkDist)
+class(folkDist)
+
+attributes(folkDist)
+```
+
+```{r}
+folkPAMK = pamk(folkDist, diss=T, krange=2:attributes(folkDist)$Size-1)
+folkPAMK
+```
+
+```{r}
+folkPAM = pam(folkDist, diss=T, k=folkPAMK$nc)
+folkPAM
+```
+
+```{r}
+plot(folkPAM)
+```
+
+```{r, eval=FALSE}
+?clusplot
+```
+
+```{r}
+clusplot(folkPAM, lines=0, color=T, labels=3)
+```
+
+<br><br>
+
+### Exploratory factor analysis
+
+```{r, eval=FALSE}
+?factanal
+```
+
+```{r, eval=FALSE}
+?psych::fa
+```
+
+```{r, eval=FALSE}
+install.packages("GPArotation")
+```
+
+```{r, eval=FALSE}
+?psych::vss
+?psych::fa.parallel
+```
+
+```{r}
+vss(bmLikCor, n=nrow(bmLikCor)-1, rotate="oblimin", fm="ml", n.obs=nrow(bmLik))
+```
+
+```{r}
+fa.parallel(bmLikCor, fm="ml", n.obs=nrow(bmLik))
+```
+
+```{r}
+bmEFA = fa(bmLikCor, nfactors=4, rotate="oblimin", fm="ml", n.obs=nrow(bmLik))
+bmEFA
+```
+
+```{r}
+bmEFA$loadings
+```
+
 
 <br><br>
 
 
-([pdf](./lecture09.pdf) / [Rmd](./lecture09.Rmd))
+([pdf](./lecture10.pdf) / [Rmd](./lecture10.Rmd))
 
 <div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;"></div>
